Everything: Added Channel Units stream
This replaces the previous idea of changing IMatrix.

- Reverted changes to IMatrix, CMatrix etc.
+ Updated global defines header
+ Made Acquisition Client box fail if connection to server cannot be made
+ Enabled multicore building on Windows


Former-commit-id: 8c1ba6befae1e82104aa241cf99855fdee04ea41 [formerly ff554545e719bbf76e02c42274ff972b3eabd9bd]
Former-commit-id: 71864bb3b22787e017fa66d21456d448a1e0e3d7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies")
 
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355 /MP")
 	SET(OV_WIN32_BOOST_VERSION "1_47")
 ELSEIF(UNIX)
 	# check for c++11 support
@@ -91,6 +91,7 @@ ENDIF(UNIX)
 #SET(SKIP_MODULES_XML "1")
 #SET(SKIP_APPLICATIONS_PLATFORM_ACQUISITION-SERVER "1")
 #SET(SKIP_APPLICATIONS_PLATFORM_DESIGNER "1")
+#SET(SKIP_PLUGINS_PROCESSING_EXAMPLES "1")
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
 
