--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies")
 
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355 /MP")
 	SET(OV_WIN32_BOOST_VERSION "1_47")
 ELSEIF(UNIX)
 	# check for c++11 support
