--- a/applications/demos/motor-imagery/bci-examples/motor-imagery/motor-imagery-bci-config-classifier.cfg
+++ b/applications/demos/motor-imagery/bci-examples/motor-imagery/motor-imagery-bci-config-classifier.cfg
@@ -1,15 +1,17 @@
 <OpenViBE-Classifier-Box XMLVersion="2">
 	<Strategy-Identifier class-id="(0xffffffff, 0xffffffff)">Native</Strategy-Identifier>
-	<Algorithm-Identifier class-id="(0xD7183FC7, 0xBD74F298)">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
+	<Algorithm-Identifier class-id="(0x2ba17a3c, 0x1bd46d83)">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
 	<Stimulations>
-		<Rejected-Class>OVTK_StimulationId_Label_00</Rejected-Class>
 		<Class-Stimulation class-id="1">OVTK_GDF_Left</Class-Stimulation>
 		<Class-Stimulation class-id="2">OVTK_GDF_Right</Class-Stimulation>
 	</Stimulations>
 	<OpenViBE-Classifier>
 		<LDA>
+			<Creator>ShrinkageLDA</Creator>
 			<Classes>1 2</Classes>
-			<Coefficients>1.230045e+00 4.850616e+00 -5.292565e+00</Coefficients>
+			<Weights> 4.842323e+00 -5.216169e+00</Weights>
+			<Bias-distance>1.12019</Bias-distance>
+			<Coefficient-probability>1.23142</Coefficient-probability>
 		</LDA>
 	</OpenViBE-Classifier>
 </OpenViBE-Classifier-Box>
