Plugins: Added new LabStreamingLayer (LSL) export box
This box is compatible with the conventions used by the
LSL Driver and the LSL Output plugin of the OpenViBE
Acquisition Server.


Former-commit-id: b4ca86c25f7e2219b70112bce52d7105d0b20586 [formerly 2e9bb4440c6f0ad08fd6fcdd173c5c87203e9e77]
Former-commit-id: 24d36815ae21e613bfaa48664d8b741938163d3b

--- a/plugins/processing/network-io/CMakeLists.txt
+++ b/plugins/processing/network-io/CMakeLists.txt
@@ -17,6 +17,7 @@ INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_System")
+INCLUDE("FindThirdPartyLSL")
 
 #so that boost won't need to link against DateTime when using the interprocess communication library
 #shared memory writer box
