Add configuration file for test.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 4ee18cfff67305dfd2e6f535129da3ec271ac122 [formerly 50b42521a4fb603adde00351183ea117f25a14e8]
Former-commit-id: 385bfa577ab0982594d60fccb804344b96a765ad

--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -107,6 +107,7 @@ Designer_ScriptEditorCommand_Windows = notepad
 Designer_ScriptEditorCommand_Linux = xdg-open
 Designer_ScriptEditorCommand = ${Designer_ScriptEditorCommand_${OperatingSystem}}
 Designer_PopUpOnError = false
+Designer_PopUpOnInitError = false
 Designer_AllowUpCastConnection = false
 Designer_ConsoleLogWithHexa = false
 Designer_ConsoleLogTimeInSecond = True
