Build: Disabled the empty contrib/classification module
Former-commit-id: da3fa071a9c652e49e0a9122fed314da683b0032 [formerly 6011493c75c22ab2841498d91eafac2f2105f2b4]
Former-commit-id: 2104c80fc684ee71b66aefa232d0e3d2b4f353c9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,9 @@ IF(UNIX)
 	SET(SKIP_PLUGINS_PROCESSING_MATLAB "1")
 ENDIF(UNIX)
 
+# Currently empty module
+SET(SKIP_CONTRIB_PLUGINS_PROCESSING_CLASSIFICATION "1")
+
 #SET(SKIP_MODULES_AUTOMATON "1")
 #SET(SKIP_MODULES_EBML "1")
 #SET(SKIP_MODULES_FS "1")
