--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ PROJECT(OpenVIBE)
 
 # These versions are used by the subprojects by default.
 # If you wish to maintain specific version numbers for a subproject, please do so in the projects CMakeLists.txt
-SET(OV_GLOBAL_VERSION_MAJOR 0)
-SET(OV_GLOBAL_VERSION_MINOR 18+git)
-SET(OV_GLOBAL_VERSION_PATCH x)
+SET(OV_GLOBAL_VERSION_MAJOR 1)
+SET(OV_GLOBAL_VERSION_MINOR 0-git)
+SET(OV_GLOBAL_VERSION_PATCH 0)
 
 # Default is to build to dist/. If you wish a custom install, set your own MAKE_INSTALL_PREFIX when you call CMake. Safest to do under a fakeroot.
 #IF(NOT CMAKE_INSTALL_PREFIX)
