Everything: Small fixes
- Fixed version number in the generated doc. Its now automatically generated.
- Designer will now point to the version-specific web documentation
- Fixed lua stimulator tutorial (Mantis #172)
- Added some verbosity to VR Demo & fixed an unimportant memory leak
- Updated version to 1.0.0+git


Former-commit-id: c7bdaab26a611f66d26c8151dec617c408d75526 [formerly 0b140c055cfeefb74e60c862ebc9ea0c8089c3fd]
Former-commit-id: b23f1562eb23a2d0fe00009d4137421aaefd11ce

--- a/documentation/src/CMakeLists.txt
+++ b/documentation/src/CMakeLists.txt
@@ -112,6 +112,11 @@ IF(doxygen_bin)
 		CreateDoxygen.cmake
 		@ONLY)
 
+	CONFIGURE_FILE(
+		openvibe.dox-base
+		openvibe.dox
+		@ONLY)	
+		
 IF(WIN32)
 	ADD_CUSTOM_COMMAND(
 		TARGET ${PROJECT_NAME}
