Add driver that relies on Mensia DLL export.
Patch contributed by Mensia Technologies.


Former-commit-id: a2094b876ae3e4634af9ef2a4e234c7e663f2017 [formerly 0ea9baa724d1ca106a684a0f7dd8b0fb21a3ca56]
Former-commit-id: 095aa73ec6f5da5d16ec6a96dfe0a08e4742e39f

--- a/applications/platform/acquisition-server/CMakeLists.txt
+++ b/applications/platform/acquisition-server/CMakeLists.txt
@@ -68,6 +68,10 @@ IF(PATH_OPENVIBE_CONTRIBUTIONS)
 	INCLUDE("${CMAKE_SOURCE_DIR}/contrib/common/contribAcquisitionServerLinkLibs.cmake")
 ENDIF(PATH_OPENVIBE_CONTRIBUTIONS)
 
+IF(NOT(DISABLE_MENSIA_ACQUISITION_DRIVER))
+	ADD_DEFINITIONS(-DTARGET_HasMensiaAcquisitionDriver)
+ENDIF()
+
 
 # ---------------------------------
 # Target macros
