Build: Added testing for OpenMP availability
Former-commit-id: c1fb429b258f579def34746a36d7e18552493cfb [formerly 80a7e11a308d489e080f8696027e408097ef2e8e]
Former-commit-id: efe10d2269d156ddbe981ca7592b59457bf249ae

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,16 @@ MESSAGE(STATUS "Appending compilation flags...")
 
 SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies")
 
+# If OpenMP is available, it will allow Eigen to use multiple cores in matrix math.
+INCLUDE("FindOpenMP")
+IF(OPENMP_FOUND)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+ENDIF(OPENMP_FOUND)
 
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
-	# the /openmp switch allows eigen to use multiple cores. Switch /arch:SSE2 enables vectorization. Remove if your CPU/compiler doesn't support them.
-	SET(OV_EIGEN_FLAGS "/openmp /arch:SSE2")
+	# Switch /arch:SSE2 enables vectorization. Remove if your CPU/compiler doesn't support it.
+	SET(OV_EIGEN_FLAGS "/arch:SSE2")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4355 /MP ${OV_EIGEN_FLAGS}")
 	SET(OV_WIN32_BOOST_VERSION "1_47")
 ELSEIF(UNIX)
@@ -38,8 +43,8 @@ ELSEIF(UNIX)
 		MESSAGE(WARNING "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. In the future this may be required.")
 	ENDIF(COMPILER_SUPPORTS_CXX11)
 
-	# the -fopenmp switch allows eigen to use multiple cores; Switch -msse2 is for vectorization. Remove if your CPU/compiler doesn't support them.
-	SET(OV_EIGEN_FLAGS "-fopenmp -msse2")
+	# Switch -msse2 enables vectorization. Remove if your CPU/compiler doesn't support it.
+	SET(OV_EIGEN_FLAGS "-msse2")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall ${OV_EIGEN_FLAGS}")
 	# This ENV var is needed to locate our custom IT++ on Linux
 	SET(ENV{PKG_CONFIG_PATH} "${OV_CUSTOM_DEPENDENCIES_PATH}/lib/pkgconfig")
