Add automatique test for the kappa coefficient. Fix Kappa coefficient.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 0086e1b673437ad656b105b6909e424b162a7266 [formerly 41f95f2272a530d73523bb8d9ae8ab390f3dee42]
Former-commit-id: ee8cab2705606ac93e720e51c00a2a25937e80db

--- a/plugins/processing/evaluation/CMakeLists.txt
+++ b/plugins/processing/evaluation/CMakeLists.txt
@@ -21,6 +21,13 @@ INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindThirdPartyGTK")
 
 # ---------------------------------
+# Test applications
+# ---------------------------------
+IF(OV_COMPILE_TESTS)
+	ADD_SUBDIRECTORY(test)
+ENDIF(OV_COMPILE_TESTS)
+
+# ---------------------------------
 # Target macros
 # Defines target operating system
 # Defines target architecture
