Tests: Added test for matrix reading and writing in txt files
Former-commit-id: 1579497865a11b476dd4583d36f882367485111c [formerly 30ad4f1cbe126f7e511d8ddd59d79512c652392d]
Former-commit-id: fb58fb70467fbd2c3e92ce2712e1fc617326f129

--- a/toolkit/CMakeLists.txt
+++ b/toolkit/CMakeLists.txt
@@ -29,6 +29,13 @@ INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindOpenViBEModuleSystem")
 
 # ---------------------------------
+# Test applications
+# ---------------------------------
+IF(OV_COMPILE_TESTS)
+	ADD_SUBDIRECTORY(test)
+ENDIF(OV_COMPILE_TESTS)
+
+# ---------------------------------
 # Target macros
 # Defines target operating system
 # Defines target architecture
