--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+IF(OV_DISABLE_COADAPT_P300)
+  RETURN()
+ENDIF(OV_DISABLE_COADAPT_P300)
+
 IF(OV_DISABLE_GTK)
   MESSAGE(STATUS  "Skipping CoAdapt P300 Stimulator, no GTK")
   RETURN()
