FindThirdPartyOgre3D asks for OGRE version <= 1.8 for compatibility Disable ssvep-mid-shooter when CEGUI is not found
Former-commit-id: f3036778d1817483ee2e84cc26d4357cc92c8189 [formerly 7023a893d9e3dc5df7864fa3c931677d5c091fd2]
Former-commit-id: b612d9dd715aa97a03ddbf40fc78171f0b3954cf

--- a/applications/demos/ssvep-mind-shooter/CMakeLists.txt
+++ b/applications/demos/ssvep-mind-shooter/CMakeLists.txt
@@ -11,6 +11,12 @@ IF(NOT PATH_VRPN)
 	RETURN()
 ENDIF(NOT PATH_VRPN)
 
+INCLUDE("FindThirdPartyCEGUI")
+IF(NOT PATH_CEGUI)
+        MESSAGE(STATUS "    --> Not building ${PROJECT_NAME}")
+        RETURN()
+ENDIF(NOT PATH_CEGUI)
+
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
