Implement FindThirdLibraryCEGUI_Check.cmake
Former-commit-id: beea4215f7cf40a3167fa5358d8303d8c820653a [formerly cd3973b44e65566a82f37675b12d2f8ffd56da16]
Former-commit-id: 7bed0aa4aeb9a647be375d390148daf20de819d4

--- a/applications/demos/ssvep-mind-shooter/CMakeLists.txt
+++ b/applications/demos/ssvep-mind-shooter/CMakeLists.txt
@@ -11,11 +11,11 @@ IF(NOT PATH_VRPN)
 	RETURN()
 ENDIF(NOT PATH_VRPN)
 
-INCLUDE("FindThirdPartyCEGUI")
-IF(NOT PATH_CEGUI)
+INCLUDE("FindThirdPartyCEGUI_Check")
+IF(NOT CEGUI_FOUND)
         MESSAGE(STATUS "    --> Not building ${PROJECT_NAME}")
         RETURN()
-ENDIF(NOT PATH_CEGUI)
+ENDIF(NOT CEGUI_FOUND)
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
