Fix cmake crash.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 2ce14cd57e05521bd668e52e1813fb723609d8d8 [formerly 3bd6ef6385c7681cb62759898e0ebf4e6a225858]
Former-commit-id: ce794e884e209bfb31c4910d65e28ba978aeae9a

--- a/applications/demos/ssvep-demo/CMakeLists.txt
+++ b/applications/demos/ssvep-demo/CMakeLists.txt
@@ -11,7 +11,7 @@ IF(NOT PATH_VRPN)
 	RETURN()
 ENDIF(NOT PATH_VRPN)
 
-INCLUDE("FindThirdPartyCEGUI")
+INCLUDE("FindThirdPartyCEGUI_Check")
 IF(NOT PATH_CEGUI)
         MESSAGE(STATUS "    --> Not building ${PROJECT_NAME}")
         RETURN()
