Fix wrong CEGUI/Ogre check. Install signal file used by classification testing even if the ssevep demo do not compile.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: f618e86f261344ff6a51e19a8f951f2923334e23 [formerly 799067fdc1ca8c925eec53f26b97881f47024f7a]
Former-commit-id: 9bb8745335e68f3d61c365ba6be3b6cb20d7af39

--- a/applications/demos/ssvep-demo/CMakeLists.txt
+++ b/applications/demos/ssvep-demo/CMakeLists.txt
@@ -12,10 +12,10 @@ IF(NOT PATH_VRPN)
 ENDIF(NOT PATH_VRPN)
 
 INCLUDE("FindThirdPartyCEGUI_Check")
-IF(NOT PATH_CEGUI)
+IF(NOT CEGUI_FOUND OR NOT OgreCEGUIRenderer_FOUND)
         MESSAGE(STATUS "    --> Not building ${PROJECT_NAME}")
         RETURN()
-ENDIF(NOT PATH_CEGUI)
+ENDIF(NOT CEGUI_FOUND OR NOT OgreCEGUIRenderer_FOUND)
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
