--- a/plugins/processing/classification/test/CMakeLists.txt
+++ b/plugins/processing/classification/test/CMakeLists.txt
@@ -21,4 +21,6 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
-	
+
+#Install the signal file required for testing
+INSTALL(DIRECTORY ../../../../applications/demos/ssvep-demo/signals      DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
