Build: Added install of the Mensia acquisition driver materials
- Added fetching of the related driver dll .zip to win32-install_dependencies
- Added a cmake find script for the dll
- Added the Mensia driver package as optional to the Windows installer. It will bring along vs2013 redistributable.
- Added test for the .dll presence to the Mensia driver to avoid an unnecessary warning if the user has not installed the optional package
- Disabled CoAdapt P300 dependencies from the installer as its not included for the moment


Former-commit-id: 646add599a20613b6a5cb6ce01e0df7b417bba69 [formerly 36704663e6b49fdf1d79d9c5040699377d3e50f5]
Former-commit-id: 2cfd07f3709438951b0661cc4b0291d5f52ea7cd

--- a/applications/platform/acquisition-server/CMakeLists.txt
+++ b/applications/platform/acquisition-server/CMakeLists.txt
@@ -51,6 +51,7 @@ INCLUDE("FindThirdPartyBioSemiLabViewAPI")
 INCLUDE("FindThirdPartyEmotivAPI")
 INCLUDE("FindThirdPartyNeXus")
 INCLUDE("FindThirdPartyMCS")
+INCLUDE("FindThirdPartyMensiaAcquisition")
 INCLUDE("FindThirdPartyMicromed")
 INCLUDE("FindThirdPartyNeuroelectricsEnobio3G")
 INCLUDE("FindThirdPartyThinkGearAPI")
