Attempt to fix Lua linking issue in fedora 21.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 851524aeb97241ae604aefd46d867ba64aebd701 [formerly 9b70a1650fcaa596651f5e6c66712ace3c236609]
Former-commit-id: 2056478ef2efa7e0f2a02705b6d83be97a9315f4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,22 @@ ELSEIF(UNIX)
 	SET(OV_EIGEN_FLAGS "-msse2")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall ${OV_EIGEN_FLAGS}")
 	# This ENV var is needed to locate our custom IT++ on Linux
-	SET(ENV{PKG_CONFIG_PATH} "${OV_CUSTOM_DEPENDENCIES_PATH}/lib/pkgconfig")
+	SET(ENV{PKG_CONFIG_PATH} "${OV_CUSTOM_DEPENDENCIES_PATH}/lib/pkgconfig")	
+
+	if (${CMAKE_SYSTEM_PROCESSOR} MATCHES i386|i586|i686)
+		set ( BIT_MODE "32")
+	else ()
+		set ( BIT_MODE "64")
+	endif ()
+
+	if(EXISTS "/etc/debian_version")
+	   set (PLATFORM "Debian")
+	endif(EXISTS "/etc/debian_version")
+
+	if(EXISTS "/etc/fedora-release")
+	   set (PLATFORM "Fedora")
+	endif(EXISTS "/etc/fedora-release")
+
 ELSE(WIN32)
 	MESSAGE(WARNING "Warning: unknown platform")
 ENDIF(WIN32)
