Build: Suppressed some CMake warnings
Former-commit-id: ed03250710f641b313a5713047f357ce82660f33 [formerly 527baf97e319c44080f8151f9a206b188ae1b9fc]
Former-commit-id: 07af65933e1f63e648bc33032c924f23d27b4b91

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
+# Here we set a few policies to get rid of warnings on newer cmakes.
+# we should update the scripts after upgrading each platform's cmake to 3.x.
+if(POLICY CMP0026)
+  cmake_policy(SET CMP0026 OLD)
+endif()
+if(POLICY CMP0043)
+  cmake_policy(SET CMP0043 OLD)
+endif()
+if(POLICY CMP0048)
+  cmake_policy(SET CMP0048 OLD)
+endif()
+
 PROJECT(OpenVIBE)
 
 # These versions are used by the subprojects by default.
