Some tweak to solve a part of the problem on windows compilation.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: ea7ba9e2469eecf24841d4238ee13208bbad7da6 [formerly d4620ed90e5d3cabc0b7da4c6413d9484b1aec7e]
Former-commit-id: f1f8904d8bbb540dc672d145680ddf2179e8118e

--- a/build-tool/stimulation-generator/CMakeLists.txt
+++ b/build-tool/stimulation-generator/CMakeLists.txt
@@ -8,8 +8,12 @@ SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_EXECUTABLE(openvibe-stimulation-generator ${source_files})
 
+if(UNIX)
 SET(stim_generator_path  "${CMAKE_CURRENT_BINARY_DIR}" CACHE INTERNAL "stim_generator_path")
-
+else()
+get_property(path_to_target TARGET openvibe-stimulation-generator PROPERTY LOCATION)
+SET(stim_generator_path  "${path_to_target}" CACHE INTERNAL "stim_generator_path")
+endif()
 # ---------------------------------
 # Target macros
 # Defines target operating system
