Matlab stimulation File.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: bd01b337df44004a0a43b5bd60dda74983260b39 [formerly 9128c1201fe1a46f388647a53a3dba80a2af0288]
Former-commit-id: c580f7de84e2554b5e137f93ab0345aa31d8134e

--- a/plugins/processing/matlab/CMakeLists.txt
+++ b/plugins/processing/matlab/CMakeLists.txt
@@ -5,8 +5,21 @@ SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
+add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/share/OV_stimulations.m
+    DEPENDS openvibe-stimulation-generator ${openvibe-toolkit_SOURCE_DIR}/share/stimulation_list.txt
+    COMMAND ${stim_generator_path}/openvibe-stimulation-generator
+    --matlab
+    ${openvibe-toolkit_SOURCE_DIR}/share/stimulation_list.txt
+    ${CMAKE_CURRENT_SOURCE_DIR}/share/OV_stimulations.m
+    COMMENT "Generating matlab stimulation sources..." )
+    
+    add_custom_target(generate_matlab_stimulations_file DEPENDS share/OV_stimulations.m)
+
+
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
+add_dependencies(openvibe-plugins-matlab generate_matlab_stimulations_file)
+
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
