Tests: Added a time test to compare clock calls
- Its a manual test so far, not run as part of the test suite.


Former-commit-id: 062c00adec324407205452b354e558f98f8bfa27 [formerly 97f219eb9f3405e00b9210938e4b3e11ed3f00fe]
Former-commit-id: d0f28ffa049462d15af9beb35b2bee413749e2b3

--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -16,6 +16,8 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	COMPILE_FLAGS "-DOV_Shared -DOV_Exports")
 
 INCLUDE("FindOpenViBECommon")
+INCLUDE("FindThirdPartyBoost")
+INCLUDE("FindThirdPartyBoost_Thread")
 
 # ---------------------------------
 # Finds standard library winmm
@@ -37,9 +39,9 @@ ENDIF(WIN32)
 # Test applications
 # ---------------------------------
 OPTION(BUILD_OPENVIBE_MODULE_System_EXAMPLES "Build OpenViBE module System examples" OFF)
-IF(BUILD_OPENVIBE_MODULE_System_EXAMPLES)
+IF(OV_COMPILE_TESTS)
 	SUBDIRS(test)
-ENDIF(BUILD_OPENVIBE_MODULE_System_EXAMPLES)
+ENDIF(OV_COMPILE_TESTS)
 
 # ---------------------------------
 # Target macros
