Tests: Factored the NTP polling to its own class in time test
- Made the NTP polling threaded
- Changed the timestamp the NTP uses
- Changed the time test running priorities to reflect those in AS
- Added a sleep period to let the clocks settle


Former-commit-id: d9e8f16cf13dbf98199da49513b2fd17bdd739b1 [formerly 2e56e1c8c351e5e88abb1d8c30e17ee9190e5b8e]
Former-commit-id: 5a797dde22c937bfadb85ee6b3a91b3c5ab78af9

--- a/modules/system/test/CMakeLists.txt
+++ b/modules/system/test/CMakeLists.txt
@@ -17,7 +17,7 @@ IF(UNIX)
 ENDIF(UNIX)
 	
 INCLUDE_DIRECTORIES(../src)
-ADD_EXECUTABLE(${PROJECT_NAME} test_time.cpp)
+ADD_EXECUTABLE(${PROJECT_NAME} test_time.cpp ntpclient.cpp ntpclient.h)
 
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBEModuleSystem")
