Modules: Added support to use boost::chrono clock
- Made this clock the default, reverting to classic ov time if the component is not available


Former-commit-id: 56da1e0aa4f31de0353d7529476bd3ce449b5581 [formerly f5c2d13e473e67b5e353b10751ac9eb7a05bbe49]
Former-commit-id: ddc25d8506fce232dfe154724acba230c7a1fcc7

--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -17,6 +17,8 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindThirdPartyBoost")
+INCLUDE("FindThirdPartyBoost_Chrono")
+INCLUDE("FindThirdPartyBoost_System")
 INCLUDE("FindThirdPartyBoost_Thread")
 
 # ---------------------------------
