Plugins: Classification is now more strict with the version checking
Former-commit-id: a5686696e9deceb543e50ad7011eb365035b1ace [formerly 730b713f23664250f574f186126211163fd07d1c]
Former-commit-id: 5604c27aa561a7fbb9d6d1b08d7a96fc471b07da

--- a/plugins/processing/classification/box-tutorials/classification-2-incremental.cfg
+++ b/plugins/processing/classification/box-tutorials/classification-2-incremental.cfg
@@ -1,4 +1,4 @@
-<OpenViBE-Classifier-Box XMLVersion="3">
+<OpenViBE-Classifier-Box FormatVersion="4">
 	<Strategy-Identifier class-id="(0xffffffff, 0xffffffff)">Native</Strategy-Identifier>
 	<Algorithm-Identifier class-id="(0x2ba17a3c, 0x1bd46d84)">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
 	<Stimulations>
