--- a/applications/developer-tools/scenario-player/CMakeLists.txt
+++ b/applications/developer-tools/scenario-player/CMakeLists.txt
@@ -1,11 +1,23 @@
 PROJECT(certivibe-scenario-player)
 
+# ----------------------
+# Project variables
+# ----------------------
 SET(PROJECT_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
 SET(PROJECT_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
-FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
+# ----------------------
+# External dependecies
+# ----------------------
+INCLUDE("FindThirdPartyBoost")
+
+# ----------------------
+# Add executable
+# ----------------------
+ADD_DEFINITIONS( -DPROJECT_VERSION="${PROJECT_VERSION}" )
+FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.hpp)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
 # ---------------------------------
