APP Scenario Player: Minor refactoring
Correct typo error in ReturnCode
Change a few comments

--- a/applications/developer-tools/scenario-player/CMakeLists.txt
+++ b/applications/developer-tools/scenario-player/CMakeLists.txt
@@ -31,7 +31,7 @@ SET_BUILD_PLATFORM()
 # ----------------------
 # Generate launch script
 # ----------------------
-OV_INSTALL_LAUNCH_SCRIPT(SCRIPT_PREFIX "cv-scenario-player" EXECUTABLE_NAME "${PROJECT_NAME}" PAUSE)
+#OV_INSTALL_LAUNCH_SCRIPT(SCRIPT_PREFIX "cv-scenario-player" EXECUTABLE_NAME "${PROJECT_NAME}" PAUSE)
 
 # -----------------------------
 # Install files
