APP Scenario Player: Add no-gui option to default configuration file

--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -87,6 +87,8 @@ Kernel_3DVisualisationOgreLogLevel = Debug
 
 Kernel_AbortPlayerWhenBoxNeedsUpdate = false
 
+Kernel_WithGUI = false
+
 #####################################################################################
 # OpenViBE plugin configuration
 #####################################################################################
