Plugins: Mods to the Graz Visualization box
- Can now optionally send certain stimuli to AS's TCP Tagging when rendering
- Added Boost System dependency for the TCP connection
- Option to only show positive feedback (that is, only to the expected direction)


Former-commit-id: dd5d015292302cd37b658c53d3de6cb4e952c8a9 [formerly 535caf602bc3161591798774c3e0db7eb8141525]
Former-commit-id: cc21e12b04bd53f2b3562fdf4bc80c6fa3f2583d

--- a/plugins/processing/simple-visualisation/CMakeLists.txt
+++ b/plugins/processing/simple-visualisation/CMakeLists.txt
@@ -24,6 +24,8 @@ INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindThirdPartyGTK")
 INCLUDE("FindThirdPartyBoost")#need boost for erp plot
+INCLUDE("FindThirdPartyBoost_System") # needed for Graz visu tcp connection
+
 # ---------------------------------
 # Target macros
 # Defines target operating system
