Build: Fixed a problem with CMake & stim generation
Former-commit-id: 690a7431015d23006b3151baf53386a86c8f2469 [formerly 8238beeeaef406f710d6a6febc518e8a08976dba]
Former-commit-id: 1921a3b01dc4ca97842c3c2252e380cb32e8c6a4

--- a/plugins/processing/matlab/CMakeLists.txt
+++ b/plugins/processing/matlab/CMakeLists.txt
@@ -7,14 +7,13 @@ SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/share/OV_stimulations.m
     DEPENDS openvibe-stimulation-generator ${openvibe-toolkit_SOURCE_DIR}/share/stimulation_list.txt
-    COMMAND ${stim_generator_path}/openvibe-stimulation-generator
+    COMMAND openvibe-stimulation-generator
     --matlab
     ${openvibe-toolkit_SOURCE_DIR}/share/stimulation_list.txt
     ${CMAKE_CURRENT_SOURCE_DIR}/share/OV_stimulations.m
     COMMENT "Generating matlab stimulation sources..." )
     
-    add_custom_target(generate_matlab_stimulations_file DEPENDS share/OV_stimulations.m)
-
+add_custom_target(generate_matlab_stimulations_file DEPENDS share/OV_stimulations.m)
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
 ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
