CertiViBE: Removed classifier plugins not in perimeter
Former-commit-id: 6aa75cfb5429b8190e094a18da0c0dba089b3cc2 [formerly a30c5d8b1fbb2d5b86219b7927efecc80f1d2c8b]
Former-commit-id: 11946fa1ac398bbc4421a386dd949a6c03318775

--- a/plugins/processing/classification/test/CMakeLists.txt
+++ b/plugins/processing/classification/test/CMakeLists.txt
@@ -23,4 +23,5 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
 #Install the signal file required for testing
-INSTALL(DIRECTORY ../../../../applications/demos/ssvep-demo/signals      DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+# @FIXME CertiViBE
+# INSTALL(DIRECTORY ../../../../applications/demos/ssvep-demo/signals      DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
