CertiViBE: Removed boxes in the signal processing plugin
Former-commit-id: 4fffd89e5a741d54082397d232ac6f6920718dab [formerly 5c39326e08f64c28b9544ae70e87c7ddf86efa77]
Former-commit-id: 056d87e7128bd9eaad3d86adccfb110ffeec454f

--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -6,9 +6,7 @@ SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files}
-	"../../../contrib/packages/wavelet2d/wavelet2s.cpp"
-	"../../../contrib/packages/wavelet2d/wavelet2s.h")
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -60,7 +58,7 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
-INSTALL(DIRECTORY signals/       DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/signals         PATTERN ".svn" EXCLUDE)
+#INSTALL(DIRECTORY signals/       DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/signals         PATTERN ".svn" EXCLUDE)
 INSTALL(DIRECTORY box-tutorials/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/box-tutorials   PATTERN ".svn" EXCLUDE)
 	
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
