--- a/plugins/processing/feature-extraction/CMakeLists.txt
+++ b/plugins/processing/feature-extraction/CMakeLists.txt
@@ -10,7 +10,7 @@ ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
-	COMPILE_FLAGS "-DOV_Exports -DOV_Shared")
+	COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
 
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
