Plugins: Add the temporal filter box

--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.hpp src/*.inl)
 INCLUDE("FindSourceRCProperties")
+INCLUDE("FindSourceDependencyDSPFilters")
 ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
